xmonad (0.10.1~darcs20120707-3) UNRELEASED; urgency=low

  * Change VCS fields back to regular

 -- Joachim Breitner <nomeata@debian.org>  Tue, 16 Oct 2012 10:01:23 +0200

xmonad (0.10.1~darcs20120707-2) experimental; urgency=low

  * Depend on haskell-devscripts 0.8.13 to ensure this packages is built
    against experimental
  * Bump standards version, no change

 -- Joachim Breitner <nomeata@debian.org>  Sun, 14 Oct 2012 12:02:40 +0200

xmonad (0.10.1~darcs20120707-1) experimental; urgency=low

  * New upstream release: darcs snapshot of xmonad 0.10.1 which doesn't yet
    have an uptream tarball.
  * Bump libghc-x11-dev build-dependency to (<< 1.7) to allow building with
    haskell-x11 1.6
  * Update Vcs-* to point to experimental
  * Added myself to uploaders.
  * Bump standards version to 3.9.3
  * Add build-dependencies on libghc-regex-posix-dev, libghc-pandoc-dev and
    pandoc required to generate manpage from markdown at build time. Update
    debian/rules to generate these manpages at build-time, and to clean up
    afterwards
  * Added DEP-3 header to use_x-terminal-emulator.patch
  * Drop Encoding=UTF-8 from xmonad.desktop and xmonad-session.desktop
  * Force the use of at least haskell-x11 1.6; xmonad-contrib will FTBFS
    if xmonad was built against 1.5

 -- Ryan Kavanagh <rak@debian.org>  Sat, 07 Jul 2012 15:24:26 -0400

xmonad (0.10-4) unstable; urgency=low

  * Add debian menu entry, thx to Kevin Ryde for the idea (Closes: #664580)

 -- Joachim Breitner <nomeata@debian.org>  Tue, 20 Mar 2012 22:31:34 +0100

xmonad (0.10-3) unstable; urgency=low

  * Sourceful upload to rebuild documentation package

 -- Joachim Breitner <nomeata@debian.org>  Fri, 10 Feb 2012 23:14:53 +0100

xmonad (0.10-2) unstable; urgency=low

  * Upload to unstable, Haskell transtition timer has been reset by another
    upload anyways.

 -- Joachim Breitner <nomeata@debian.org>  Thu, 01 Dec 2011 23:53:14 +0100

xmonad (0.10-1) experimental; urgency=low
