@@ -1,6 +1,11 @@
 xmonad (0.10.1~darcs20120707-3) UNRELEASED; urgency=low
 
+  [ Joachim Breitner ]
   * Change VCS fields back to regular
+
+  [ Ryan Kavanagh ]
+  * Don't run GenerateManpage with runghc at build time, fixes FTBFS on
+    architectures without ghci.
 
  -- Joachim Breitner <nomeata@debian.org>  Tue, 16 Oct 2012 10:01:23 +0200
 
